# ariadne

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  et --soft HEAD~1
.github/workflows/: rust.yml
examples/: labels.rs  many.rs  multifile.rs  multiline.rs  next.rs  oneline.rs  sample.tao  simple.rs  stresstest.rs  test_io.rs
src/: .write.rs.pending-snap  caused_by.rs  config.rs  display.rs  draw.rs  file.rs  label.rs  layout.rs  lib.rs  next.rs  render.rs  source.rs  span.rs  write.rs
src/report/: builder.rs  mod.rs  style.rs  tests.rs  write.rs
src/source/: mod.rs  tests.rs
src/write/: mod.rs  tests.rs
