[package]
name = "ariadne"
version = "0.1.1"
description = "A fancy diagnostics & reporting crate"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
license = "MIT"
repository = "https://github.com/zesterer/ariadne"
readme = "README.md"
edition = "2018"
keywords = ["error", "diagnostics", "report", "pretty", "compiler"]
categories = ["command-line-utilities", "compilers", "filesystem", "visualization"]
exclude = [
	"/misc",
	"/misc/*",
]

[dependencies]
yansi = "0.5"
