[package]
name = "ariadne"
version = "0.4.0"
description = "A fancy diagnostics & reporting crate"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
license = "MIT"
repository = "https://github.com/zesterer/ariadne"
readme = "README.md"
edition = "2018"
keywords = ["error", "diagnostics", "report", "pretty", "compiler"]
categories = ["command-line-utilities", "compilers", "filesystem", "visualization"]
exclude = [
	"/misc",
	"/misc/*",
]

[features]
auto-color = ["concolor", "concolor/auto"]

[dependencies]
yansi = "0.5"
unicode-width = "0.1.9"
concolor = { version = "0.1", optional = true }

[dev-dependencies]
insta = "1.31.0"
